test/ServiceMailer.php
<?php
declare(strict_types=1);

/*
 * This file is part of the QuidPHP package.
 * Website: https://quidphp.com
 * License: https://github.com/quidphp/main/blob/master/LICENSE
 */

namespace Quid\Test\Main;
use Quid\Base;

// serviceMailer
// class for testing Quid\Main\ServiceMailer
class ServiceMailer extends Base\Test
{
    // trigger
    public static function trigger(array $data):bool
    {
        // construct

        // prepare

        // error

        // isActive

        // username

        // from

        // reset

        // mailer

        // isReady

        // checkReady

        // prepareMessage

        // messageCastObj

        // messageWithOption

        // send

        // sendOnCloseDown

        // sendNowOrOnCloseDown

        // sendTest

        // sendLoop

        // queue

        // queueTest

        // queueLoop

        // dispatch

        // dispatchLoop

        // log

        // queueClass

        // logClass

        // getDispatch

        // setDispatch

        return true;
    }
}
?>